syntax = "proto3";
package ordercomm;

option go_package = "github.com/FrancescoIlario/usplay/pkg/services/ordercomm";

option optimize_for = LITE_RUNTIME;

// The Order service definition.
service OrderSvc {
    // Creates a new order
    rpc Create (CreateOrderRequest) returns (CreateOrderReply) {}
    // Reads an order
    rpc Read (ReadOrderRequest) returns (ReadOrderReply) {}
    // Exists an order
    rpc Exist (ExistOrderRequest) returns (ExistOrderReply) {}
    // Delete an order
    rpc Delete (DeleteOrderRequest) returns (DeleteOrderReply) {}
    // Update an order
    rpc Update (UpdateOrderRequest) returns (UpdateOrderReply) {}
    // List an order
    rpc List (ListOrdersRequest) returns (ListOrdersReply) {}
}

// The request message containing the order details
message CreateOrderRequest {
    string Name = 1;
    string Code = 2;
    string Description = 3;
}

// The response message containing the id of the order
message CreateOrderReply {
    string Id = 1;
}

// The request message for the read request
message ReadOrderRequest {
    string Id = 1;
}

// The response message to the read request
message ReadOrderReply {
    Order order = 1;
}

// The request message for the exists request
message ExistOrderRequest {
    string Id = 1;
}

// The response message to the exists request
message ExistOrderReply {
    bool exists = 1;
}


// The request message for the delete request
message DeleteOrderRequest {
    string Id = 1;
}

// The response message to the delete request
message DeleteOrderReply {
    Order order = 1;
}

// The request message for the update request
message UpdateOrderRequest {
    string Id = 1;
    string Name = 2;
    string Code = 3;
    string Description = 4;
}

// The response message to the update request.
// Returns the old values for the Order
message UpdateOrderReply {
    Order order = 1;
}

// The request message for the list orders request
message ListOrdersRequest { 
    repeated string FilterIds = 1;
}

// The response message to the list orders request.
message ListOrdersReply {
    repeated Order orders = 1;
}

message Order {
    string Id = 1;
    string Name = 2;
    string Code = 3;
    string Description = 4;
}